# bobot-1

./: .gitignore  README.md  ball.txt  bobot_kickstarter.sh  bobot_serial_comm_scheme.ino  dev_preparer.sh  flight_preparer.sh  flight_terminal_output.txt  manager_node.py  servo_protocol.ino
BOBOT1schematic/: BOBOT_library.bak  Baby Bobot Electronics Schematic copy.kicad_prl  Baby Bobot Electronics Schematic copy.kicad_pro
bobot_recovery/: current_flight.txt
electronics/BOBOT1schematic/: BOBOT_library.kicad_sym  Baby Bobot Electronics Schematic copy.kicad_sch  sym-lib-table
resources/: .$Path_to_flight_bb_bobot1.drawio.bkp  Path_to_flight_bb_bobot1.drawio
resources/documentation/: links_to_docs.docx
src/bobot_arduino_testing/: servo_protocol.ino  shoulder_motor_testing.ino
src/bobot_bin/log_files/error_logs/: bobot_log_06-09-23_104034.txt  bobot_log_16-12-23_191321.txt  bobot_log_25-01-24_120555.txt
src/bobot_bin/log_files/flight_logs/: bobot_flight_csv_data_log_2024-10-27_08-18-19.csv  bobot_flight_csv_data_log_2024-10-27_08-44-21.csv  bobot_flight_csv_data_log_2024-10-27_08-44-53.csv  bobot_flight_csv_data_log_2024-10-27_08-45-30.csv  bobot_flight_csv_data_log_2024-10-27_08-47-51.csv  bobot_flight_csv_data_log_2024-11-16_21-25-00.csv  bobot_flight_csv_data_log_2024-11-16_21-56-40.csv  bobot_flight_csv_data_log_2024-11-16_22-16-12.csv  bobot_flight_csv_data_log_2024-11-16_22-53-50.csv  bobot_flight_csv_data_log_2024-11-16_23-25-26.csv  bobot_flight_csv_data_log_2024-11-16_23-39-36.csv  bobot_flight_csv_data_log_2025-05-11_17-08-39.csv  bobot_flight_csv_data_log_2025-05-11_17-10-26.csv  bobot_flight_csv_data_log_2025-05-11_17-10-49.csv  bobot_flight_csv_data_log_2025-05-11_17-11-01.csv  bobot_flight_log_2024-10-27_07-43-50.txt  bobot_flight_log_2024-10-27_08-08-00.txt  bobot_flight_log_2024-10-27_08-10-38.txt  bobot_flight_log_2024-10-27_08-13-13.txt  bobot_flight_log_2024-10-27_08-15-39.txt  bobot_flight_log_2024-10-27_08-18-19.txt  bobot_flight_log_2024-10-27_08-44-21.txt  bobot_flight_log_2024-10-27_08-44-53.txt  bobot_flight_log_2024-10-27_08-45-30.txt  bobot_flight_log_2024-10-27_08-47-51.txt  bobot_flight_log_2024-11-16_21-25-00.txt  bobot_flight_log_2024-11-16_21-56-40.txt  bobot_flight_log_2024-11-16_22-16-12.txt  bobot_flight_log_2024-11-16_22-53-50.txt  bobot_flight_log_2024-11-16_23-25-26.txt  bobot_flight_log_2024-11-16_23-39-36.txt  bobot_flight_log_2024-11-16_23-52-36.txt  bobot_flight_log_2025-05-11_17-08-39.txt  bobot_flight_log_2025-05-11_17-10-26.txt  bobot_flight_log_2025-05-11_17-10-49.txt  bobot_flight_log_2025-05-11_17-11-01.txt  bobot_log_05-09-23_195154.txt  bobot_log_05-09-23_203127.txt  bobot_log_05-09-23_203146.txt  bobot_log_05-09-23_204212.txt  (+24 more)
src/bobot_bringup/: CMakeLists.txt  bobot_launch_config.yaml  package.xml
src/bobot_bringup/launch/: core_launcher.launch.py
src/bobot_camera/: CMakeLists.txt  package.xml
src/bobot_camera/launch/: camera_bringup.launch.py
src/bobot_camera/src/: bobot_camera.cpp  bobot_color_detection.cpp  bobot_shape_detection.cpp
src/bobot_control/: CMakeLists.txt  package.xml
src/bobot_control/launch/: bobot_control.launch.py
src/bobot_control/src/: bb_bobot_basic_trajectory.cpp
src/bobot_hardware_interface/: CMakeLists.txt  package.xml
src/bobot_hardware_interface/include/bobot_hardware_interface/: bobot_altimeter_interface.hpp  bobot_servo_interface.hpp
src/bobot_hardware_interface/src/: bobot_altimeter_interface.cpp  bobot_servo_interface.cpp
src/bobot_launcher/: CMakeLists.txt  bobot_launch_config.yaml  package.xml
src/bobot_launcher/launch/: core_launcher.launch.py
src/bobot_manager/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/bobot_manager/bobot_manager/: manager_node.py  timer_node.py
src/bobot_manager/src/: bobot_manager.cpp
src/bobot_msgs/: CMakeLists.txt  package.xml
src/bobot_msgs/msg/: AltitudeMonitor.msg  BobotCommander.msg  BobotTimer.msg  ServoJerk.msg
src/bobot_msgs/srv/: BobotLastTimerValue.srv
src/bobot_test/: CMakeLists.txt  package.xml
src/bobot_test/src/: bobot_serial_test.cpp
src/bobot_utils/: CMakeLists.txt  bobot_hardware_config.yaml  package.xml
src/bobot_utils/hardware/bb_bobot1/: board_info.yaml  hardware.yaml  pinouts.yaml
src/bobot_utils/include/bobot_utils/: bobot_common_types.hpp
src/bobot_utils/launch/: bobot_utility_launcher.launch.py
src/bobot_utils/src/: altitude_monitor.cpp  lifecycle_timer_node.cpp  servo_jerker.cpp  simple_timer_node.cpp  timer_node.cpp
src/tests/: package.xml  setup.cfg  setup.py
src/tests/tests/: servoNodeTest.py
tests/: CMakeLists.txt  package.xml
tools/: bobot_bootup.sh  flight_timer_kicker.sh
