<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bobot_manager</name>
  <version>0.0.0</version>
  <description>Main control node for BOBOT-1</description>
  <maintainer email="romeperl@umd.edu">romeperl</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>bobot_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
